<resources>
    <string name="app_name">Health Care Data Entry</string>
    <string name="title_activity_skin">SkinActivity</string>
    <string name="title_activity_health1">HealthActivity 1</string>
    <string name="title_activity_health2">HealthActivity2</string>
    <string name="title_activity_eye1">EyeActivity1</string>
    <string name="title_activity_eye2">EyeActivity2</string>
    <string name="health">Student ID :</string>
    <string name="height">Height :</string>
    <string name="weight">Weight :</string>
    <string name="waist">Waist Circumference :</string>
    <string name="hip">Hip Circumference :</string>
    <string name="pulse">Pulse Rate :</string>
    <string name="rrate">Respiratory Rate :</string>
    <string name="bp">Blood Presure :</string>
    <string name="persl">Personal Hygiene :</string>
    <string name="nail">Nails -</string>
    <string name="bath">Bathing -</string>
    <string name="groom">Grooming -</string>
    <string name="oral">Oral Care -</string>
    <string name="men">Age of Menarche -</string>
    <string name="san">Sanitary Napkin -</string>
    <string name="anaemia">Clinical Anaemia :</string>
    <string name="oralexam">Oral Examination :</string>
    <string name="dental">Dental Caries -</string>
    <string name="fluoro">Fluorosis -</string>
    <string name="gingi">Gingivitis -</string>
    <string name="oralulcer">Oral Ulcers &amp; Periapical \nAbscess -</string>
    <string name="development">Developmental Abnormality :</string>
    <string name="add">Others :</string>
    <string name="Sys">Systemic Examination :</string>
    <string name="Resp">Respiratory System :</string>
    <string name="ho">H/O of Wheezing etc -</string>
    <string name="lung">Clear Lung Fields -</string>
    <string name="cardio">Cardio-Vascular System :</string>
    <string name="heart">Abnormal Heart Sounds-:</string>
    <string name="gastro">Gastro-Intestinal System :</string>
    <string name="acute">H/O Gastro-Enteritis \nin last 6 months-</string>
    <string name="musculo">Musculoskeletal System :</string>
    <string name="nerve">Nervous System :</string>
    <string name="worm">H/O Worm Infestation \nin last 6 months-</string>
    <string name="deform">Deformities -</string>
    <string name="seizures">H/O Seizures(fits) -</string>
    <string name="behave">Behavioural Problems :</string>
    <string name="adhd">ADHD -</string>
    <string name="uti">UTI -</string>
    <string name="genito">Genitourinary System :</string>
    <string name="bed">Bedwetting -</string>
    <string name="vitdef">Vitamin Deficiency :</string>
    <string name="vitc">Vitamin C \nDeficiency -</string>
    <string name="vitb">Vitamin B Complex  \nDeficiency -</string>
    <string name="otherdis">Other Infectious \nDiseases :</string>
    <string name="injury">H/o Injuries :</string>
    <string name="title_activity_eye">Eye</string>
    <string name="right">Right</string>
    <string name="left">Left</string>
    <string name="scab">Scabies</string>
    <string name="pityal">PityriasisAlba</string>
    <string name="phry">Phrynoderma</string>
    <string name="pedi">Pediculosis</string>
    <string name="pityver">Pityriasis Vrsicolor</string>
    <string name="imp">Impetigo</string>
    <string name="papu">Papularurticaria</string>
    <string name="tin">Tinea Cruris / Corporis</string>
    <string name="mil">Miliaria</string>
    <string name="viral">Viral Warts</string>
    <string name="oti">Otitis Externa</string>
    <string name="asom">ASOM</string>
    <string name="csom">CSOM</string>
    <string name="impact">Impacted Wax</string>
    <string name="impair">Impaired Hearing</string>
    <string name="epi">H/o Epistaxis</string>
    <string name="adeno">Adenotonsilitis</string>
    <string name="phary">Pharyngitis</string>
    <string name="aller">Allergic Rhinitis</string>
    <string name="speech">Speech Defects</string>
    <string name="cvis">Colour Vision</string>
    <string name="bitot">Bitot\'s Spots</string>
    <string name="allconj">Allergy Conjunctivitis</string>
    <string name="night">Night Blindness</string>
    <string name="congp">Congenital Ptosis</string>
    <string name="congd">Congenital Developmental Cataract</string>
    <string name="amb">Amblyopia (Concomitant Squint)</string>
    <string name="nys">Nystagmus (Abnormal Macular Fixation)</string>
    <string name="fund">Fundus Examination</string>
    <string name="spherical">Spherical</string>
    <string name="cylinder">Cylinder</string>
    <string name="axis">Axis</string>
    <string name="refract">Refraction &amp; Correction</string>
    <string name="hint"><i>Enter comment</i></string>
    <string name="eyehint"><i>Additional information</i></string>
    <string name="action_settings">Settings</string>
    <string name="studentId">Student ID : </string>
    <string name="schoolId">School ID : </string>
    <string name="name">Name : </string>
    <string name="age">Date of Birth : </string>
    <string name="gender">Gender : </string>
    <string name="parents">Name of Parents/Guardian : </string>
    <string name="fatherName">Father : </string>
    <string name="motherName">Mother : </string>
    <string name="guardianName">Guardian : </string>
    <string name="attendance">Attendance : </string>
    <string name="performance">Academic Performance : </string>
    <string name="aadhar">Aadhar Number : </string>
    <string name="enterName">Enter Student\'s Name</string>
    <string name="enterSchoolID">Enter School ID</string>
    <string name="enterFatherName">Enter Father\'s Name</string>
    <string name="enterMotherName">Enter Mother\'s Name</string>
    <string name="enterGuardianName">Enter Guardian\'s Name</string>
    <string name="enterAttedance">Enter Attendance in Percentage</string>
    <string name="enterPerformance">Enter Performance in Percentage</string>
    <string name="enterAadhar">Enter Aadhar Number</string>
    <string-array name="gender_array">
        <item>Select..</item>
        <item>Male</item>
        <item>Female</item>
        <item>Other</item>
    </string-array>
    <string name="standard">Standard : </string>
    <string-array name="standard_array">
        <item>Select..</item>
        <item>I</item>
        <item>II</item>
        <item>III</item>
        <item>IV</item>
        <item>V</item>
        <item>VI</item>
        <item>VII</item>
        <item>VIII</item>
        <item>IX</item>
        <item>X</item>
    </string-array>
    <string name="title_activity_main">Student Data Entry</string>
    <string name="title_activity_socio_demographic_details">Socio Demographic Details Of Family</string>
    <string name="homeAddress">Home Address : </string>
    <string name="homeContactDetails">Home Contact Details : </string>
    <string name="landline">Landline : </string>
    <string name="mobile">Mobile : </string>
    <string name="typeOfFamily">Type of Family : </string>
    <string-array name="typeOfFamily_array">
        <item>Select..</item>
        <item>Nuclear</item>
        <item>Three Generation</item>
        <item>Joint</item>
        <item>Extended</item>
    </string-array>
    <string name="numberOfFamilyMembers">Number of Family Members : </string>
    <string name="headOfFamily">Head of the Family : </string>
    <string name="title">Title : </string>
    <string name="occupation">Occupation : </string>
    <string name="education">Education : </string>
    <string name="totalIncome">Total Income of the Family(INR) : </string>
    <string name="socioEconomicClass">Socio-Economic Class : </string>
    <string-array name="socioEconomicClass_array">
        <item>Select..</item>
        <item>I</item>
        <item>II</item>
        <item>III</item>
        <item>IV</item>
        <item>V</item>
    </string-array>
    <string name="homeAddressHint">Enter Home Address</string>
    <string name="landlineHint">Enter Landline Phone Number</string>
    <string name="mobileHint">Enter Mobile Phone Number</string>
    <string name="numberOfFamilyMembersHint">Enter the Number of Family Members</string>
    <string name="titleHint">Enter Title of the Head of the Family(Father,Grandfather etc)</string>
    <string name="educationHint">Enter Education Qualification(s)</string>
    <string name="occupationHint">Enter Occupation(s)</string>
    <string name="totalIncomeOfTheFamilyHint">Enter Total Income of the Family in INR</string>
    <string name="housingStandards">Housing Standards : </string>
    <string name="typeOfHouse">Type of House : </string>
    <string name="flooring">Flooring : </string>
    <string name="rooms">Rooms : </string>
    <string name="numberOfRooms">Number of Rooms : </string>
    <string name="numberOfHouseholds">Number of Households : </string>
    <string name="overcrowding">Overcrowding : </string>
    <string name="separateRooms">Separate Rooms for Boys and Girls >9 Years : </string>
    <string name="crossVentilation">Cross Ventilation : </string>
    <string name="adequateLighting">Adequate Lighting: </string>
    <string name="kitchenSink">Kitchen with Sink : </string>
    <string name="waterSupply">Water Supply : </string>
    <string name="hygenicSurroundings">Hygenic Surroundings : </string>
    <string name="sanitaryLatrine">Sanitary Latrine : </string>
    <string-array name="garbageDisposal">
        <item>Select..</item>
        <item>Open Land</item>
        <item>Multiple Dust Bins</item>
    </string-array>
    <string name="healthCareServices">Availing Near-By Health Care Services : </string>
    <string name="dietaryPattern">Dietary Pattern : </string>
    <string name="frequencyOfSkipping">Frequency of Skipping the Breakfast/week : </string>
    <string name="OverNightFood">Children Having Over-Night Food in the Mornings : </string>
    <string name="bothParents">Both Parents Working : </string>
    <string name="frequencyHint">Enter Frequency</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string-array name="typeOfHouse_array">
        <item>Select..</item>
        <item>Kutcha</item>
        <item>Semi-Pucca</item>
        <item>Pucca</item>
    </string-array>
    <string-array name="flooring_array">
        <item>Select..</item>
        <item>Mud</item>
        <item>Pucca</item>
    </string-array>
    <string-array name="waterSupply_array">
        <item>Select..</item>
        <item>Bore Well</item>
        <item>Panchayat</item>
        <item>Open Well</item>
    </string-array>
    <string-array name="academicPerf">
        <item>Select..</item>
        <item>A+</item>
        <item>A</item>
        <item>B+</item>
        <item>B</item>
        <item>C</item>
    </string-array>
    <string-array name="overNight">
        <item>Select..</item>
        <item>Never</item>
        <item>Occasional</item>
        <item>Frequent</item>
    </string-array>
    <string name="referal">Referral : </string>
    <string name="required">Required</string>
    <string name="notRequired">Not Required</string>
    <string name="truama">Trauma of Tooth : </string>
    <string name="spacing">Spacing : </string>
    <string name="crowding">Corwding : </string>
    <string name="cleft">Cleft Lip/ \nCleft Palate : </string>
    <string name="operated">Operated</string>
    <string name="notOperated">Not Operated</string>
    <string name="chronic">Chronic Cough\n(>2 weeks) : </string>
    <string name="bronchial">Bronchial Asthama : </string>
    <string name="sounds">Adventitious Sounds : </string>
    <string-array name="bronchinal_array">
        <item>None</item>
        <item>Oral</item>
        <item>Inhaler Medications</item>
    </string-array>
    <string name="xerosis">Xerosis</string>
    <string name="bowlegs">Bow Legs</string>
    <string name="knocked">Knocked Knees</string>
    <string name="injuryr">Injury Related Mal-union</string>
    <string name="treatment">Treatment Taken</string>
</resources>