<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="healthcare.studentdataentry.StudentDetails"
    tools:showIn="@layout/activity_student_details">


    <LinearLayout
        style="@style/horizontal"
        android:id="@+id/StudentIDLayout"
        android:background="@drawable/shape"
        android:layout_marginTop="0dp"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/studentId"
                android:layout_weight=".4"
                style="@style/studentID"
                android:id="@+id/siddisplay"
                android:layout_gravity="center_vertical"
                />
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                style="@style/studentID"
                android:id="@+id/studentID"
                android:layout_weight=".4"
                android:layout_marginTop="5dp"
                android:layout_gravity="center_vertical"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="5dp">
            <TextView
                android:layout_width="0dp"
                android:layout_gravity="center_vertical"
                android:layout_height="wrap_content"
                android:text="@string/schoolId"
                android:layout_weight=".4"
                style="@style/studentID"
                android:id="@+id/sciddisplay"
                />
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                style="@style/studentID"
                android:id="@+id/schoolID"
                android:layout_weight=".4"
                android:layout_marginTop="5dp"
                android:layout_gravity="center_vertical"
                />
        </LinearLayout>

    </LinearLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_below="@id/StudentIDLayout"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="10dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                style="@style/container"
                android:layout_marginTop="0dp">
                <LinearLayout
                    style="@style/horizontal"
                    android:id="@+id/nameLayout">
                    <TextView
                        style="@style/head"
                        android:text="@string/name"/>
                    <EditText
                        style="@style/entryBox"
                        android:id="@+id/name"
                        android:hint="@string/enterName"/>
                </LinearLayout>
                <LinearLayout
                    style="@style/horizontal"
                    android:id="@+id/ageLayout">
                    <TextView
                        style="@style/head"
                        android:text="@string/age"/>
                    <DatePicker
                        style="@style/entryBox"
                        android:calendarViewShown="false"
                        android:datePickerMode="spinner"
                        android:id="@+id/age"></DatePicker>

                </LinearLayout>
                <LinearLayout
                    style="@style/horizontal"
                    android:id="@+id/genderLayout">
                    <TextView
                        style="@style/head"
                        android:text="@string/gender"/>
                    <Spinner
                        style="@style/entryBox"
                        android:id="@+id/gender"
                        ></Spinner>
                </LinearLayout>
                <LinearLayout
                    style="@style/horizontal"
                    android:id="@+id/standardLayout">
                    <TextView
                        style="@style/head"
                        android:text="@string/standard"/>
                    <Spinner
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight=".60"
                        android:id="@+id/standard"
                        ></Spinner>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                style="@style/container">

                <TextView
                    style="@style/head"
                    android:layout_width="match_parent"
                    android:text="@string/parents"
                    android:textStyle="bold"
                    android:textSize="26dp"/>
                <LinearLayout
                    style="@style/horizontal"
                    android:layout_marginTop="5dp">
                    <TextView
                        style="@style/head"
                        android:text="@string/fatherName"
                        android:paddingLeft="15dp"/>
                    <EditText
                        style="@style/entryBox"
                        android:id="@+id/fatherName"
                        android:hint="@string/enterFatherName"/>
                </LinearLayout>
                <LinearLayout
                    style="@style/horizontal"
                    android:layout_marginTop="5dp">
                    <TextView
                        style="@style/head"
                        android:text="@string/motherName"
                        android:paddingLeft="15dp"/>
                    <EditText
                        style="@style/entryBox"
                        android:id="@+id/motherName"
                        android:hint="@string/enterMotherName"/>
                </LinearLayout>
                <LinearLayout
                    style="@style/horizontal"
                    android:layout_marginTop="5dp">
                    <TextView
                        style="@style/head"
                        android:text="@string/guardianName"
                        android:paddingLeft="15dp"/>
                    <EditText
                        style="@style/entryBox"
                        android:id="@+id/guardianName"
                        android:hint="@string/enterGuardianName"/>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                style="@style/container">
                <LinearLayout
                    style="@style/horizontal"
                    android:id="@+id/attendanceLayout">
                    <TextView
                        style="@style/head"
                        android:text="@string/attendance"/>
                    <EditText
                        style="@style/entryBox"
                        android:inputType="number"
                        android:maxLength="3"
                        android:id="@+id/attendance"
                        android:hint="@string/enterAttedance"/>
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/performanceLayout"
                    style="@style/horizontal">
                    <TextView
                        style="@style/head"
                        android:text="@string/performance"/>
                    <Spinner
                        style="@style/entryBox"
                        android:id="@+id/academicPerformance"
                        ></Spinner>
                    <!--
                    <EditText
                        style="@style/entryBox"
                        android:inputType="number"
                        android:maxLength="3"
                        android:id="@+id/performance"
                        android:hint="@string/enterPerformance"/>-->
                </LinearLayout>
                <LinearLayout
                    style="@style/horizontal"
                    android:id="@+id/aadharLayout">
                    <TextView
                        style="@style/head"
                        android:text="@string/aadhar"/>
                    <EditText
                        style="@style/entryBox"
                        android:inputType="number"
                        android:maxLength="12"
                        android:id="@+id/aadhar"
                        android:hint="@string/enterAadhar"/>
                </LinearLayout>
            </LinearLayout>






        </LinearLayout>
    </ScrollView>


</RelativeLayout>
